examples/1-22b.js

"use strict";
var number = 5;
// ...
numebr = number + 1; // error: numebr is not defined

//Uncaught ReferenceError ReferenceError: numebr is not defined